// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneratePropsH can generate for 'ArrayPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <cinttypes>
#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/graphicsConversions.h>
#include <react/renderer/core/propsConversions.h>
#include <react/renderer/graphics/Color.h>
#include <react/renderer/graphics/Point.h>
#include <react/renderer/graphics/RectangleEdges.h>
#include <react/renderer/imagemanager/primitives.h>
#include <vector>
#include <yoga/Yoga.h>

namespace facebook::react {

using ArrayPropsNativeComponentViewSizesMask = uint32_t;

struct ArrayPropsNativeComponentViewSizesMaskWrapped {
  ArrayPropsNativeComponentViewSizesMask value;
};

enum class ArrayPropsNativeComponentViewSizes: ArrayPropsNativeComponentViewSizesMask {
  Small = 1 << 0,
  Large = 1 << 1
};

constexpr bool operator&(
  ArrayPropsNativeComponentViewSizesMask const lhs,
  enum ArrayPropsNativeComponentViewSizes const rhs) {
  return lhs & static_cast<ArrayPropsNativeComponentViewSizesMask>(rhs);
}

constexpr ArrayPropsNativeComponentViewSizesMask operator|(
  ArrayPropsNativeComponentViewSizesMask const lhs,
  enum ArrayPropsNativeComponentViewSizes const rhs) {
  return lhs | static_cast<ArrayPropsNativeComponentViewSizesMask>(rhs);
}

constexpr void operator|=(
  ArrayPropsNativeComponentViewSizesMask &lhs,
  enum ArrayPropsNativeComponentViewSizes const rhs) {
  lhs = lhs | static_cast<ArrayPropsNativeComponentViewSizesMask>(rhs);
}

static inline void fromRawValue(const PropsParserContext& context, const RawValue &value, ArrayPropsNativeComponentViewSizesMaskWrapped &wrapped) {
  auto items = std::vector<std::string>{value};
  for (const auto &item : items) {
    if (item == \\"small\\") {
      wrapped.value |= ArrayPropsNativeComponentViewSizes::Small;
      continue;
    }
    if (item == \\"large\\") {
      wrapped.value |= ArrayPropsNativeComponentViewSizes::Large;
      continue;
    }
    abort();
  }
}

static inline std::string toString(const ArrayPropsNativeComponentViewSizesMaskWrapped &wrapped) {
    auto result = std::string{};
    auto separator = std::string{\\", \\"};

    if (wrapped.value & ArrayPropsNativeComponentViewSizes::Small) {
      result += \\"small\\" + separator;
    }
    if (wrapped.value & ArrayPropsNativeComponentViewSizes::Large) {
      result += \\"large\\" + separator;
    }
    if (!result.empty()) {
      result.erase(result.length() - separator.length());
    }
    return result;
}
struct ArrayPropsNativeComponentViewObjectStruct {
  std::string prop{};

#ifdef RN_SERIALIZABLE_STATE
  bool operator==(const ArrayPropsNativeComponentViewObjectStruct&) const = default;

  folly::dynamic toDynamic() const {
    folly::dynamic result = folly::dynamic::object();
    result[\\"prop\\"] = prop;
    return result;
  }
#endif
};

static inline void fromRawValue(const PropsParserContext& context, const RawValue &value, ArrayPropsNativeComponentViewObjectStruct &result) {
  auto map = (std::unordered_map<std::string, RawValue>)value;

  auto tmp_prop = map.find(\\"prop\\");
  if (tmp_prop != map.end()) {
    fromRawValue(context, tmp_prop->second, result.prop);
  }
}

static inline std::string toString(const ArrayPropsNativeComponentViewObjectStruct &value) {
  return \\"[Object ArrayPropsNativeComponentViewObjectStruct]\\";
}

#ifdef RN_SERIALIZABLE_STATE
static inline folly::dynamic toDynamic(const ArrayPropsNativeComponentViewObjectStruct &value) {
  return value.toDynamic();
}
#endif

static inline void fromRawValue(const PropsParserContext& context, const RawValue &value, std::vector<ArrayPropsNativeComponentViewObjectStruct> &result) {
  auto items = (std::vector<RawValue>)value;
  for (const auto &item : items) {
    ArrayPropsNativeComponentViewObjectStruct newItem;
    fromRawValue(context, item, newItem);
    result.emplace_back(newItem);
  }
}


struct ArrayPropsNativeComponentViewArrayOfObjectsStruct {
  Float prop1{0.0};
  int prop2{0};

#ifdef RN_SERIALIZABLE_STATE
  bool operator==(const ArrayPropsNativeComponentViewArrayOfObjectsStruct&) const = default;

  folly::dynamic toDynamic() const {
    folly::dynamic result = folly::dynamic::object();
    result[\\"prop1\\"] = prop1;
    result[\\"prop2\\"] = prop2;
    return result;
  }
#endif
};

static inline void fromRawValue(const PropsParserContext& context, const RawValue &value, ArrayPropsNativeComponentViewArrayOfObjectsStruct &result) {
  auto map = (std::unordered_map<std::string, RawValue>)value;

  auto tmp_prop1 = map.find(\\"prop1\\");
  if (tmp_prop1 != map.end()) {
    fromRawValue(context, tmp_prop1->second, result.prop1);
  }
  auto tmp_prop2 = map.find(\\"prop2\\");
  if (tmp_prop2 != map.end()) {
    fromRawValue(context, tmp_prop2->second, result.prop2);
  }
}

static inline std::string toString(const ArrayPropsNativeComponentViewArrayOfObjectsStruct &value) {
  return \\"[Object ArrayPropsNativeComponentViewArrayOfObjectsStruct]\\";
}

#ifdef RN_SERIALIZABLE_STATE
static inline folly::dynamic toDynamic(const ArrayPropsNativeComponentViewArrayOfObjectsStruct &value) {
  return value.toDynamic();
}
#endif

static inline void fromRawValue(const PropsParserContext& context, const RawValue &value, std::vector<ArrayPropsNativeComponentViewArrayOfObjectsStruct> &result) {
  auto items = (std::vector<RawValue>)value;
  for (const auto &item : items) {
    ArrayPropsNativeComponentViewArrayOfObjectsStruct newItem;
    fromRawValue(context, item, newItem);
    result.emplace_back(newItem);
  }
}

class ArrayPropsNativeComponentViewProps final : public ViewProps {
 public:
  ArrayPropsNativeComponentViewProps() = default;
  ArrayPropsNativeComponentViewProps(const PropsParserContext& context, const ArrayPropsNativeComponentViewProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  std::vector<std::string> names{};
  std::vector<bool> disableds{};
  std::vector<int> progress{};
  std::vector<Float> radii{};
  std::vector<SharedColor> colors{};
  std::vector<ImageSource> srcs{};
  std::vector<Point> points{};
  std::vector<EdgeInsets> edgeInsets{};
  std::vector<YGValue> dimensions{};
  ArrayPropsNativeComponentViewSizesMask sizes{static_cast<ArrayPropsNativeComponentViewSizesMask>(ArrayPropsNativeComponentViewSizes::Small)};
  std::vector<ArrayPropsNativeComponentViewObjectStruct> object{};
  std::vector<ArrayPropsNativeComponentViewArrayOfObjectsStruct> arrayOfObjects{};
  std::vector<folly::dynamic> arrayOfMixed{};

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;

exports[`GeneratePropsH can generate for 'BooleanPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>

namespace facebook::react {

class BooleanPropNativeComponentViewProps final : public ViewProps {
 public:
  BooleanPropNativeComponentViewProps() = default;
  BooleanPropNativeComponentViewProps(const PropsParserContext& context, const BooleanPropNativeComponentViewProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  bool disabled{false};
  bool disabledNullable{};

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;

exports[`GeneratePropsH can generate for 'ColorPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/graphics/Color.h>

namespace facebook::react {

class ColorPropNativeComponentViewProps final : public ViewProps {
 public:
  ColorPropNativeComponentViewProps() = default;
  ColorPropNativeComponentViewProps(const PropsParserContext& context, const ColorPropNativeComponentViewProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  SharedColor tintColor{};

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;

exports[`GeneratePropsH can generate for 'DimensionPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/graphicsConversions.h>
#include <yoga/Yoga.h>

namespace facebook::react {

class DimensionPropNativeComponentViewProps final : public ViewProps {
 public:
  DimensionPropNativeComponentViewProps() = default;
  DimensionPropNativeComponentViewProps(const PropsParserContext& context, const DimensionPropNativeComponentViewProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  YGValue marginBack{};

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;

exports[`GeneratePropsH can generate for 'EdgeInsetsPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>

namespace facebook::react {

class EdgeInsetsPropNativeComponentViewProps final : public ViewProps {
 public:
  EdgeInsetsPropNativeComponentViewProps() = default;
  EdgeInsetsPropNativeComponentViewProps(const PropsParserContext& context, const EdgeInsetsPropNativeComponentViewProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;

exports[`GeneratePropsH can generate for 'EnumPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>

namespace facebook::react {

enum class EnumPropNativeComponentViewAlignment { Top, Center, BottomRight };

static inline void fromRawValue(const PropsParserContext& context, const RawValue &value, EnumPropNativeComponentViewAlignment &result) {
  auto string = (std::string)value;
  if (string == \\"top\\") { result = EnumPropNativeComponentViewAlignment::Top; return; }
  if (string == \\"center\\") { result = EnumPropNativeComponentViewAlignment::Center; return; }
  if (string == \\"bottom-right\\") { result = EnumPropNativeComponentViewAlignment::BottomRight; return; }
  abort();
}

static inline std::string toString(const EnumPropNativeComponentViewAlignment &value) {
  switch (value) {
    case EnumPropNativeComponentViewAlignment::Top: return \\"top\\";
    case EnumPropNativeComponentViewAlignment::Center: return \\"center\\";
    case EnumPropNativeComponentViewAlignment::BottomRight: return \\"bottom-right\\";
  }
}

#ifdef RN_SERIALIZABLE_STATE
static inline folly::dynamic toDynamic(const EnumPropNativeComponentViewAlignment &value) {
  return toString(value);
}
#endif
enum class EnumPropNativeComponentViewIntervals { Intervals0 = 0, Intervals15 = 15, Intervals30 = 30, Intervals60 = 60 };

static inline void fromRawValue(const PropsParserContext& context, const RawValue &value, EnumPropNativeComponentViewIntervals &result) {
  assert(value.hasType<int>());
  auto integerValue = (int)value;
  switch (integerValue) {
    case 0:
      result = EnumPropNativeComponentViewIntervals::Intervals0;
      return;
    case 15:
      result = EnumPropNativeComponentViewIntervals::Intervals15;
      return;
    case 30:
      result = EnumPropNativeComponentViewIntervals::Intervals30;
      return;
    case 60:
      result = EnumPropNativeComponentViewIntervals::Intervals60;
      return;
  }
  abort();
}

static inline std::string toString(const EnumPropNativeComponentViewIntervals &value) {
  switch (value) {
    case EnumPropNativeComponentViewIntervals::Intervals0: return \\"0\\";
    case EnumPropNativeComponentViewIntervals::Intervals15: return \\"15\\";
    case EnumPropNativeComponentViewIntervals::Intervals30: return \\"30\\";
    case EnumPropNativeComponentViewIntervals::Intervals60: return \\"60\\";
  }
}

#ifdef RN_SERIALIZABLE_STATE
static inline folly::dynamic toDynamic(const EnumPropNativeComponentViewIntervals &value) {
  switch (value) {
    case EnumPropNativeComponentViewIntervals::Intervals0: return 0;
    case EnumPropNativeComponentViewIntervals::Intervals15: return 15;
    case EnumPropNativeComponentViewIntervals::Intervals30: return 30;
    case EnumPropNativeComponentViewIntervals::Intervals60: return 60;
  }
}
#endif

class EnumPropNativeComponentViewProps final : public ViewProps {
 public:
  EnumPropNativeComponentViewProps() = default;
  EnumPropNativeComponentViewProps(const PropsParserContext& context, const EnumPropNativeComponentViewProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  EnumPropNativeComponentViewAlignment alignment{EnumPropNativeComponentViewAlignment::Center};
  EnumPropNativeComponentViewIntervals intervals{EnumPropNativeComponentViewIntervals::Intervals0};

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;

exports[`GeneratePropsH can generate for 'EventNestedObjectPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>

namespace facebook::react {

class EventNestedObjectPropsNativeComponentViewProps final : public ViewProps {
 public:
  EventNestedObjectPropsNativeComponentViewProps() = default;
  EventNestedObjectPropsNativeComponentViewProps(const PropsParserContext& context, const EventNestedObjectPropsNativeComponentViewProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  bool disabled{false};

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;

exports[`GeneratePropsH can generate for 'EventPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>

namespace facebook::react {

class EventPropsNativeComponentViewProps final : public ViewProps {
 public:
  EventPropsNativeComponentViewProps() = default;
  EventPropsNativeComponentViewProps(const PropsParserContext& context, const EventPropsNativeComponentViewProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  bool disabled{false};

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;

exports[`GeneratePropsH can generate for 'FloatPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>

namespace facebook::react {

class FloatPropsNativeComponentViewProps final : public ViewProps {
 public:
  FloatPropsNativeComponentViewProps() = default;
  FloatPropsNativeComponentViewProps(const PropsParserContext& context, const FloatPropsNativeComponentViewProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  Float blurRadius{0.0};
  Float blurRadius2{0.001};
  Float blurRadius3{2.1};
  Float blurRadius4{0.0};
  Float blurRadius5{1.0};
  Float blurRadius6{0.0};
  Float blurRadiusNullable{};

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;

exports[`GeneratePropsH can generate for 'ImagePropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/imagemanager/primitives.h>

namespace facebook::react {

class ImagePropNativeComponentViewProps final : public ViewProps {
 public:
  ImagePropNativeComponentViewProps() = default;
  ImagePropNativeComponentViewProps(const PropsParserContext& context, const ImagePropNativeComponentViewProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  ImageSource thumbImage{};

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;

exports[`GeneratePropsH can generate for 'IntegerPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>

namespace facebook::react {

class IntegerPropNativeComponentViewProps final : public ViewProps {
 public:
  IntegerPropNativeComponentViewProps() = default;
  IntegerPropNativeComponentViewProps(const PropsParserContext& context, const IntegerPropNativeComponentViewProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  int progress1{0};
  int progress2{-1};
  int progress3{10};

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;

exports[`GeneratePropsH can generate for 'InterfaceOnlyNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>

namespace facebook::react {

class InterfaceOnlyNativeComponentViewProps final : public ViewProps {
 public:
  InterfaceOnlyNativeComponentViewProps() = default;
  InterfaceOnlyNativeComponentViewProps(const PropsParserContext& context, const InterfaceOnlyNativeComponentViewProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  std::string title{\\"\\"};

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;

exports[`GeneratePropsH can generate for 'MixedPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>

namespace facebook::react {

class MixedPropNativeComponentViewProps final : public ViewProps {
 public:
  MixedPropNativeComponentViewProps() = default;
  MixedPropNativeComponentViewProps(const PropsParserContext& context, const MixedPropNativeComponentViewProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  folly::dynamic mixedProp{};

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;

exports[`GeneratePropsH can generate for 'MultiNativePropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/graphics/Color.h>
#include <react/renderer/graphics/Point.h>
#include <react/renderer/imagemanager/primitives.h>

namespace facebook::react {

class MultiNativePropNativeComponentViewProps final : public ViewProps {
 public:
  MultiNativePropNativeComponentViewProps() = default;
  MultiNativePropNativeComponentViewProps(const PropsParserContext& context, const MultiNativePropNativeComponentViewProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  ImageSource thumbImage{};
  SharedColor color{};
  SharedColor thumbTintColor{};
  Point point{};

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;

exports[`GeneratePropsH can generate for 'NoPropsNoEventsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>

namespace facebook::react {

class NoPropsNoEventsNativeComponentViewProps final : public ViewProps {
 public:
  NoPropsNoEventsNativeComponentViewProps() = default;
  NoPropsNoEventsNativeComponentViewProps(const PropsParserContext& context, const NoPropsNoEventsNativeComponentViewProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;

exports[`GeneratePropsH can generate for 'ObjectPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <react/renderer/components/image/conversions.h>
#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>
#include <react/renderer/graphics/Color.h>
#include <react/renderer/graphics/Point.h>
#include <react/renderer/imagemanager/primitives.h>
#include <vector>

namespace facebook::react {

enum class ObjectPropsNativeComponentStringEnumProp { Small, Large };

static inline void fromRawValue(const PropsParserContext& context, const RawValue &value, ObjectPropsNativeComponentStringEnumProp &result) {
  auto string = (std::string)value;
  if (string == \\"small\\") { result = ObjectPropsNativeComponentStringEnumProp::Small; return; }
  if (string == \\"large\\") { result = ObjectPropsNativeComponentStringEnumProp::Large; return; }
  abort();
}

static inline std::string toString(const ObjectPropsNativeComponentStringEnumProp &value) {
  switch (value) {
    case ObjectPropsNativeComponentStringEnumProp::Small: return \\"small\\";
    case ObjectPropsNativeComponentStringEnumProp::Large: return \\"large\\";
  }
}

#ifdef RN_SERIALIZABLE_STATE
static inline folly::dynamic toDynamic(const ObjectPropsNativeComponentStringEnumProp &value) {
  return toString(value);
}
#endif
enum class ObjectPropsNativeComponentIntEnumProp { IntEnumProp0 = 0, IntEnumProp1 = 1 };

static inline void fromRawValue(const PropsParserContext& context, const RawValue &value, ObjectPropsNativeComponentIntEnumProp &result) {
  assert(value.hasType<int>());
  auto integerValue = (int)value;
  switch (integerValue) {
    case 0:
      result = ObjectPropsNativeComponentIntEnumProp::IntEnumProp0;
      return;
    case 1:
      result = ObjectPropsNativeComponentIntEnumProp::IntEnumProp1;
      return;
  }
  abort();
}

static inline std::string toString(const ObjectPropsNativeComponentIntEnumProp &value) {
  switch (value) {
    case ObjectPropsNativeComponentIntEnumProp::IntEnumProp0: return \\"0\\";
    case ObjectPropsNativeComponentIntEnumProp::IntEnumProp1: return \\"1\\";
  }
}

#ifdef RN_SERIALIZABLE_STATE
static inline folly::dynamic toDynamic(const ObjectPropsNativeComponentIntEnumProp &value) {
  switch (value) {
    case ObjectPropsNativeComponentIntEnumProp::IntEnumProp0: return 0;
    case ObjectPropsNativeComponentIntEnumProp::IntEnumProp1: return 1;
  }
}
#endif
struct ObjectPropsNativeComponentObjectPropStruct {
  std::string stringProp{\\"\\"};
  bool booleanProp{false};
  Float floatProp{0.0};
  int intProp{0};
  ObjectPropsNativeComponentStringEnumProp stringEnumProp{ObjectPropsNativeComponentStringEnumProp::Small};
  ObjectPropsNativeComponentIntEnumProp intEnumProp{ObjectPropsNativeComponentIntEnumProp::IntEnumProp0};

#ifdef RN_SERIALIZABLE_STATE
  bool operator==(const ObjectPropsNativeComponentObjectPropStruct&) const = default;

  folly::dynamic toDynamic() const {
    folly::dynamic result = folly::dynamic::object();
    result[\\"stringProp\\"] = stringProp;
    result[\\"booleanProp\\"] = booleanProp;
    result[\\"floatProp\\"] = floatProp;
    result[\\"intProp\\"] = intProp;
    result[\\"stringEnumProp\\"] = ::facebook::react::toDynamic(stringEnumProp);
    result[\\"intEnumProp\\"] = ::facebook::react::toDynamic(intEnumProp);
    return result;
  }
#endif
};

static inline void fromRawValue(const PropsParserContext& context, const RawValue &value, ObjectPropsNativeComponentObjectPropStruct &result) {
  auto map = (std::unordered_map<std::string, RawValue>)value;

  auto tmp_stringProp = map.find(\\"stringProp\\");
  if (tmp_stringProp != map.end()) {
    fromRawValue(context, tmp_stringProp->second, result.stringProp);
  }
  auto tmp_booleanProp = map.find(\\"booleanProp\\");
  if (tmp_booleanProp != map.end()) {
    fromRawValue(context, tmp_booleanProp->second, result.booleanProp);
  }
  auto tmp_floatProp = map.find(\\"floatProp\\");
  if (tmp_floatProp != map.end()) {
    fromRawValue(context, tmp_floatProp->second, result.floatProp);
  }
  auto tmp_intProp = map.find(\\"intProp\\");
  if (tmp_intProp != map.end()) {
    fromRawValue(context, tmp_intProp->second, result.intProp);
  }
  auto tmp_stringEnumProp = map.find(\\"stringEnumProp\\");
  if (tmp_stringEnumProp != map.end()) {
    fromRawValue(context, tmp_stringEnumProp->second, result.stringEnumProp);
  }
  auto tmp_intEnumProp = map.find(\\"intEnumProp\\");
  if (tmp_intEnumProp != map.end()) {
    fromRawValue(context, tmp_intEnumProp->second, result.intEnumProp);
  }
}

static inline std::string toString(const ObjectPropsNativeComponentObjectPropStruct &value) {
  return \\"[Object ObjectPropsNativeComponentObjectPropStruct]\\";
}

#ifdef RN_SERIALIZABLE_STATE
static inline folly::dynamic toDynamic(const ObjectPropsNativeComponentObjectPropStruct &value) {
  return value.toDynamic();
}
#endif

struct ObjectPropsNativeComponentObjectArrayPropStruct {
  std::vector<std::string> array{};

#ifdef RN_SERIALIZABLE_STATE
  bool operator==(const ObjectPropsNativeComponentObjectArrayPropStruct&) const = default;

  folly::dynamic toDynamic() const {
    folly::dynamic result = folly::dynamic::object();
    result[\\"array\\"] = ::facebook::react::toDynamic(array);
    return result;
  }
#endif
};

static inline void fromRawValue(const PropsParserContext& context, const RawValue &value, ObjectPropsNativeComponentObjectArrayPropStruct &result) {
  auto map = (std::unordered_map<std::string, RawValue>)value;

  auto tmp_array = map.find(\\"array\\");
  if (tmp_array != map.end()) {
    fromRawValue(context, tmp_array->second, result.array);
  }
}

static inline std::string toString(const ObjectPropsNativeComponentObjectArrayPropStruct &value) {
  return \\"[Object ObjectPropsNativeComponentObjectArrayPropStruct]\\";
}

#ifdef RN_SERIALIZABLE_STATE
static inline folly::dynamic toDynamic(const ObjectPropsNativeComponentObjectArrayPropStruct &value) {
  return value.toDynamic();
}
#endif

struct ObjectPropsNativeComponentObjectPrimitiveRequiredPropStruct {
  ImageSource image{};
  SharedColor color{};
  Point point{};

#ifdef RN_SERIALIZABLE_STATE
  bool operator==(const ObjectPropsNativeComponentObjectPrimitiveRequiredPropStruct&) const = default;

  folly::dynamic toDynamic() const {
    folly::dynamic result = folly::dynamic::object();
    result[\\"image\\"] = ::facebook::react::toDynamic(image);
    result[\\"color\\"] = ::facebook::react::toDynamic(color);
    result[\\"point\\"] = ::facebook::react::toDynamic(point);
    return result;
  }
#endif
};

static inline void fromRawValue(const PropsParserContext& context, const RawValue &value, ObjectPropsNativeComponentObjectPrimitiveRequiredPropStruct &result) {
  auto map = (std::unordered_map<std::string, RawValue>)value;

  auto tmp_image = map.find(\\"image\\");
  if (tmp_image != map.end()) {
    fromRawValue(context, tmp_image->second, result.image);
  }
  auto tmp_color = map.find(\\"color\\");
  if (tmp_color != map.end()) {
    fromRawValue(context, tmp_color->second, result.color);
  }
  auto tmp_point = map.find(\\"point\\");
  if (tmp_point != map.end()) {
    fromRawValue(context, tmp_point->second, result.point);
  }
}

static inline std::string toString(const ObjectPropsNativeComponentObjectPrimitiveRequiredPropStruct &value) {
  return \\"[Object ObjectPropsNativeComponentObjectPrimitiveRequiredPropStruct]\\";
}

#ifdef RN_SERIALIZABLE_STATE
static inline folly::dynamic toDynamic(const ObjectPropsNativeComponentObjectPrimitiveRequiredPropStruct &value) {
  return value.toDynamic();
}
#endif
class ObjectPropsNativeComponentProps final : public ViewProps {
 public:
  ObjectPropsNativeComponentProps() = default;
  ObjectPropsNativeComponentProps(const PropsParserContext& context, const ObjectPropsNativeComponentProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  ObjectPropsNativeComponentObjectPropStruct objectProp{};
  ObjectPropsNativeComponentObjectArrayPropStruct objectArrayProp{};
  ObjectPropsNativeComponentObjectPrimitiveRequiredPropStruct objectPrimitiveRequiredProp{};

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;

exports[`GeneratePropsH can generate for 'PointPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/graphics/Point.h>

namespace facebook::react {

class PointPropNativeComponentViewProps final : public ViewProps {
 public:
  PointPropNativeComponentViewProps() = default;
  PointPropNativeComponentViewProps(const PropsParserContext& context, const PointPropNativeComponentViewProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  Point startPoint{};

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;

exports[`GeneratePropsH can generate for 'StringPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "Props.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsH.js
 */
#pragma once

#include <react/renderer/components/view/ViewProps.h>
#include <react/renderer/core/PropsParserContext.h>

namespace facebook::react {

class StringPropNativeComponentViewProps final : public ViewProps {
 public:
  StringPropNativeComponentViewProps() = default;
  StringPropNativeComponentViewProps(const PropsParserContext& context, const StringPropNativeComponentViewProps &sourceProps, const RawProps &rawProps);

#pragma mark - Props

  std::string placeholder{\\"\\"};
  std::string defaultValue{};

  #ifdef RN_SERIALIZABLE_STATE
  ComponentName getDiffPropsImplementationTarget() const override;

  folly::dynamic getDiffProps(const Props* prevProps) const override;
  #endif
};

} // namespace facebook::react
",
}
`;
